Separated matrix and vector algebra into different files

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 	    </div>
         </main>
 </div>
+<script src="matrix.js"></script>
 <script src="truss.js"></script>
 <script src="gui.js"></script>
 </html>
